samples/_failures_safe/1761606559_c46cb0_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_f5aba519.c: In function ‘print_sample_entries’:
./samples/SAFE/__tmp_f5aba519.c:137:22: error: expected ‘,’ or ‘;’ at end of input
  137 |         const struct LogEntry *entry = &analyzer
      |                      ^~~~~~~~
./samples/SAFE/__tmp_f5aba519.c:137:22: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_f5aba519.c:137:22: error: expected declaration or statement at end of input
